<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/welcomeText"
        android:textAlignment="center"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="match_parent"
        android:layout_height="161dp"
        app:srcCompat="@drawable/recipes" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:background="@drawable/border_layout">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textNoSuggestions|textPersonName"
            android:text="@string/username" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:text="@string/password" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/loginButtonText" />
    </LinearLayout>

    <TextView
        android:id="@+id/continueTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continueTextViewText"
        android:textColor="@android:color/holo_blue_dark"
        android:paddingLeft="50dp"/>

</LinearLayout>
