<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        app:srcCompat="@android:color/holo_orange_dark"
        android:layout_weight="0.08" />

    <TextView
        android:id="@+id/recipeNameTextView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:text="@string/recipeName"
        android:textSize="30dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/recipeIngredientsTextView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:text="@string/ingredients"
        android:textSize="20dp"
        android:textColor="@android:color/black"/>

    <ListView
        android:id="@+id/recipeIngredientsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/recipeDetailsTextView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:text="@string/directions"
        android:textSize="20dp"
        android:textColor="@android:color/black"/>

    <TextView android:id="@+id/recipeDetailsContentTextView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:textSize="17dp"
        android:textColor="@android:color/black"/>

    </LinearLayout>
</ScrollView>